<resources>
    <string name="app_name">Fast Media Sorter &amp; Organizer</string>
    <string name="poster_thumbnail_unavailable">Thumbnail unavailable</string>
    <string name="thumbnail_unavailable_network_format">%1$s video file, thumbnail unavailable on network</string>
    <string name="add_new_account">Add New Account</string>
    <string name="start_player">Start Player</string>
    <string name="add">Add</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="action_retry">Retry</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="select">Select</string>
    <string name="error_queued_operation_move">Couldn\'t move "%1$s". Try again.</string>
    <string name="error_queued_operation_delete">Couldn\'t delete "%1$s". Try again.</string>
    <string name="error_queued_operation_rename">Couldn\'t rename "%1$s". Try again.</string>
    <string name="error_queued_move_permission_denied">"%1$s" was copied to the destination, but the local copy couldn\'t be deleted - permission was denied.</string>
    <string name="control">Control</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="ok">OK</string>
    <string name="dialog_player_exit_pending_queue_title">Background operations are still running</string>
    <plurals name="dialog_player_exit_pending_queue_message">
        <item quantity="one">%1$d file operation is still finishing. Stay here to let it finish, or leave now.</item>
        <item quantity="other">%1$d file operations are still finishing. Stay here to let them finish, or leave now.</item>
    </plurals>
    <string name="dialog_player_exit_pending_queue_leave">Leave anyway</string>
    <string name="dialog_player_exit_pending_queue_stay">Stay</string>
    <string name="create_folder">Create Folder</string>
    <string name="create_folder_title">New Folder</string>
    <string name="create_folder_hint">Folder name</string>
    <string name="error_invalid_folder_name">Invalid folder name</string>
    <string name="error_folder_already_exists">Folder already exists</string>
    <string name="help">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="share">Share</string>
    <string name="number_format" translatable="false">%1$d</string>
    <string name="string_format" translatable="false">%1$s</string>
    <string name="string_format_two_args" translatable="false">%1$s %2$s</string>
    <string name="search">Search</string>
    <string name="search_hint">Search..</string>
    <string name="language_capability_translation">Translation</string>
    <string name="language_capability_basic_ocr">Basic OCR</string>
    <string name="language_capability_quality_ocr">Quality OCR</string>
    <string name="language_capability_nolegal_ocr">noLegal OCR</string>
    <string name="translate">Translate</string>
    <string name="no_files_selected">No files selected</string>
    <string name="msg_last_filter_restored">Restored last filter: %1$s</string>
    <string name="warning_files_may_remain_in_source">Some files may still be in the source folder. Please check both source and destination. Affected: %1$d.</string>
    <string name="no_supported_files_in_resource">No supported file types in resource</string>
    <string name="process_started">Process started..</string>
    <string name="long_operation_started">Operation in progress, please wait..</string>
    <string name="please_wait">Please wait..</string>
    <string name="favorites">Favorites</string>
    <string name="resource">Resource</string>
    <string name="media_type">Media type</string>
    <string name="documentation">Documentation Portal</string>
    <string name="camera_ocr_result_header">OCR Translation Result</string>
    <string name="camera_ocr_pane_translation">Translation</string>
    <string name="camera_ocr_pane_original">Original text</string>
    <string name="camera_ocr_btn_save">Save as .txt</string>
    <string name="camera_ocr_btn_next">Next photo</string>
    <string name="camera_ocr_loading_processing">Processing photo..</string>
    <string name="camera_ocr_loading_saving">Extracting text and translating..</string>
    <string name="camera_ocr_empty_desc">Ensure the photo contains clear text and try again.</string>
    <string name="camera_ocr_save_success">Saved text to %s</string>
    <string name="camera_ocr_save_error">Failed to save text file</string>
    <string name="camera_ocr_camera_error">Camera failed to launch or capture photo</string>
    <string name="camera_ocr_engine_error">Translation engine is currently unavailable</string>
    <string name="camera_ocr_crop_title">Select area</string>
    <string name="camera_ocr_crop_hint">Drag the frame to crop, or tap OK to use the whole photo</string>
    <string name="camera_ocr_crop_retry">Retry</string>
    <string name="camera_ocr_crop_confirm">OK</string>
    <string name="camera_ocr_crop_frame_desc">Crop selection frame</string>
    <string name="copying_files">Copying..</string>
    <string name="copying_n_files_from_folder">Copying %1$d files from %2$s..</string>
    <string name="copied_n_files">Copied %1$d files.</string>
    <string name="copied_n_of_m_files">Copied %1$d of %2$d files.</string>
    <string name="copy_failed">Could not copy the files.</string>
    <string name="no_destinations_available">No destination resources configured</string>
    <string name="archiving_n_files_from_folder">Archiving %1$d files from %2$s</string>
    <string name="moving_files">Moving..</string>
    <string name="moving_n_files_from_folder">Moving %1$d files from %2$s..</string>
    <string name="moved_n_files">Moved %1$d files.</string>
    <string name="moved_n_of_m_files">Moved %1$d of %2$d files.</string>
    <string name="move_failed">Could not move the files.</string>
    <string name="renaming_files">Renaming..</string>
    <string name="renaming_n_files_from_folder">Renaming %1$d files from %2$s..</string>
    <string name="renamed_n_files">Renamed %1$d files.</string>
    <string name="rename_failed">Could not rename the files.</string>
    <string name="rename_failed_generic">Could not rename that file.</string>
    <string name="rename_file_name_empty">File name cannot be empty.</string>
    <string name="error_copy">Could not copy the files</string>
    <string name="error_move">Could not move the files</string>
    <string name="error_delete">Could not delete the files</string>
    <string name="error_all_operations_failed">Nothing completed.</string>
    <string name="all_copy_operations_failed">Could not copy the selected files.\n\n%1$s</string>
    <string name="all_move_operations_failed">Could not move the selected files.\n\n%1$s</string>
    <string name="all_delete_operations_failed">Could not delete the selected files.</string>
    <string name="deleting_files">Deleting Files</string>
    <string name="deleting_n_files">Deleting %1$d files..</string>
    <string name="title_export_logs_chooser">Export Logs via..</string>
    <string name="share_debug_logs">Share Debug Logs</string>
    <string name="save_debug_logs">Save Debug Logs</string>
    <string name="save_logs_success">Logs saved to device</string>
    <string name="save_logs_failed">Failed to save logs</string>
    <string name="save_logs_not_supported">Your device does not support the file-picker dialog.\n\nWould you like to share the log archive instead?</string>
    <string name="copied_n_file_s">Copied %1$d file(s)</string>
    <string name="moved_n_file_s">Moved %1$d file(s)</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear All</string>
    <string name="filter">Filter</string>
    <string name="refresh">Refresh</string>
    <string name="copy_resource">Duplicate Folder Settings</string>
    <string name="exit">Exit</string>
    <string name="sort">Sort</string>
    <string name="toggle_view">View</string>
    <string name="toggle_view_short">List/Grid</string>
    <string name="select_all_short">All</string>
    <string name="play">Play</string>
    <string name="play_random">Play Random</string>
    <string name="play_random_short">Random</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="scroll_to_bottom">Scroll to bottom</string>
    <string name="scroll_page_up">Page up</string>
    <string name="scroll_page_down">Page down</string>
    <string name="empty_state_message">Welcome! 🎉\n\nStart by configuring app settings and adding local device folders to this screen</string>
    <string name="no_media_files_found">No media files found in this folder</string>
    <string name="recent_media">Recent Media</string>
    <string name="virtual_all_music">All Music</string>
    <string name="virtual_all_video">All Videos</string>
    <string name="language">Language/Язык/Мова</string>
    <string name="prevent_sleep">Prevent sleep</string>
    <string name="small_controls">Compact player buttons</string>
    <string name="google_lens">Google Lens</string>
    <string name="user_guide">User Guide</string>
    <string name="cd_playback_speed">Playback speed</string>
    <string name="resource_pin_code">PIN Code (Optional)</string>
    <string name="resource_pin_code_hint">4-6 digits to protect this folder</string>
    <string name="scan_subdirectories">Scan subdirectories</string>
    <string name="read_only_mode">Read-only mode</string>
    <string name="cb_local_scan_subdirectories_desc">Search for media files in all nested subdirectories</string>
    <string name="cb_local_add_to_destinations_desc">Mark this folder as a quick sort destination</string>
    <string name="cb_local_read_only_mode_desc">Prevents file operations (copy, move, delete)</string>
    <string name="add_to_destinations">Add to Quick Sort</string>
    <string name="lyrics">Lyrics</string>
    <string name="search_in_youtube_music">In YouMusic</string>
    <string name="menu_print">Print</string>
    <string name="action_open_in_separate_window">Open in new window</string>
    <string name="grant_local_files_permission">Local files access</string>
    <string name="grant_network_permission">Network permission</string>
    <string name="show_log">Show Log</string>
    <string name="show_current_session_log">Current Session Log</string>
    <string name="default_user">Default User</string>
    <string name="default_password">Default Password</string>
    <string name="menu_save_frame">Save Frame</string>
    <string name="menu_crop">Crop</string>
    <string name="menu_crop_to_file">Crop to file</string>
    <string name="menu_compress_copy">Compressed copy</string>
    <string name="menu_draw_overlay">Draw</string>
    <string name="scan_button">SCAN</string>
    <string name="add_manually_button">Add Manually</string>
    <string name="resources_to_add">Resources to add:</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="menu_sleep_timer">Sleep Timer</string>
    <string name="open_in_fms">Open in FastMediaSorter</string>
    <string name="action_find_duplicates">Find Duplicates</string>
    <string name="action_delete_duplicates">Find and Delete Duplicates</string>
    <string name="action_delete_by_size">Delete by Size..</string>
    <string name="cmd_camera_capture">Capture with camera</string>
    <string name="action_create_folder">Create Folder</string>
    <string name="menu_automate_source">Automation..</string>
    <string name="menu_add_receiver">Add to Sort List</string>
    <string name="archive_files">Archive</string>
    <string name="black_screen_button_title">Black screen</string>
</resources>