<?xml version="1.0" encoding="utf-8"?>
<!-- Context menu for media files (right-click menu) -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open"
        android:title="@string/open"
        android:icon="@drawable/ic_play" />
    <item
        android:id="@+id/action_select"
        android:title="@string/select"
        android:icon="@drawable/ic_check" />
    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/copy"
        android:icon="@android:drawable/ic_menu_save" />
    <item
        android:id="@+id/action_move"
        android:title="@string/move"
        android:icon="@drawable/ic_swap_horizontal" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_rename" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete" />
    <item
        android:id="@+id/action_info"
        android:title="@string/file_info"
        android:icon="@drawable/ic_help_outline_24" />
</menu>
