<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@android:drawable/ic_menu_edit" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/copy_resource"
        android:icon="@android:drawable/ic_menu_save" />
    <item
        android:id="@+id/action_move_up"
        android:title="@string/move_up"
        android:icon="@android:drawable/arrow_up_float" />
    <item
        android:id="@+id/action_move_down"
        android:title="@string/move_down"
        android:icon="@android:drawable/arrow_down_float" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete" />
</menu>
