<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layoutLocalFolder" android:layout_width="@dimen/match_constraint" android:layout_height="0dp" android:visibility="gone" app:layout_constraintTop_toBottomOf="@id/toolbarContainer" app:layout_constraintBottom_toTopOf="@id/btnAddToResources" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingStart="@dimen/padding_large" android:paddingEnd="@dimen/padding_large" android:paddingTop="@dimen/padding_small" android:paddingBottom="@dimen/padding_large">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical|end">

            <com.google.android.material.button.MaterialButton android:id="@+id/btnScan" style="@style/Widget.FastMediaSorter.Button.Filled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/scan_button" app:icon="@drawable/ic_search" />

            <com.google.android.material.button.MaterialButton android:id="@+id/btnAddManually" style="@style/Widget.FastMediaSorter.Button.Filled" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/resource_button_margin_start" android:text="@string/add_manually_button" app:icon="@drawable/ic_add" />

        </LinearLayout>

        <TextView android:id="@+id/tvResourcesToAdd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resources_to_add" android:textSize="@dimen/resource_card_title_text_size" android:textStyle="@string/text_style_bold" android:layout_marginTop="@dimen/resource_padding_zero" android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvResourcesToAdd" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/resource_padding_zero" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" android:visibility="gone" tools:listitem="@layout/item_resource_to_add" />

        <!-- Scan Subdirectories and Destination checkboxes -->
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="@dimen/resource_padding_zero" android:visibility="gone" android:id="@+id/layoutLocalOptions">

            <com.sza.fastmediasorter.ui.common.widget.FormCheckboxRow android:id="@+id/cbLocalScanSubdirectories" android:layout_width="@dimen/match_constraint" android:layout_height="wrap_content" android:layout_weight="1" app:fcr_checked="true" app:fcr_title="@string/scan_subdirectories" app:fcr_subtitle="@string/cb_local_scan_subdirectories_desc" />

            <com.sza.fastmediasorter.ui.common.widget.FormCheckboxRow android:id="@+id/cbLocalAddToDestinations" android:layout_width="@dimen/match_constraint" android:layout_height="wrap_content" android:layout_weight="1" app:fcr_title="@string/add_to_destinations" app:fcr_subtitle="@string/cb_local_add_to_destinations_desc" />

        </LinearLayout>

        <!-- Read-Only Mode checkbox -->
        <com.sza.fastmediasorter.ui.common.widget.FormCheckboxRow android:id="@+id/cbLocalReadOnlyMode" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/resource_margin_2dp" android:visibility="gone" app:fcr_title="@string/read_only_mode" app:fcr_subtitle="@string/cb_local_read_only_mode_desc" />

        <!-- PIN Code (Optional) -->
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/tilLocalPinCode" android:layout_width="@dimen/resource_port_width" android:layout_height="wrap_content" android:hint="@string/resource_pin_code" app:helperText="@string/resource_pin_code_hint" app:helperTextEnabled="true" app:helperTextTextAppearance="@style/TextAppearance.FastMediaSorter.HelperText" app:endIconMode="password_toggle" android:layout_marginTop="@dimen/resource_margin_2dp" android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/etLocalPinCode" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberPassword" android:imeOptions="flagNoExtractUi" android:maxLength="6" android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
